k8s/deploy/dev/istio-routing/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: yas-dev-public-gateway
  namespace: yas-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - storefront.yas.local.com
        - backoffice.yas.local.com
        - api.yas.local.com
