k8s/deploy/dev/istio-routing/backoffice-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backoffice-public-routes
  namespace: yas-dev
spec:
  hosts:
    - backoffice.yas.local.com
  gateways:
    - yas-dev-public-gateway
  http:
    - route:
        - destination:
            host: backoffice-bff
            port:
              number: 80
