k8s/deploy/dev/istio-routing/identity-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: identity-public-routes
  namespace: yas-dev
spec:
  hosts:
    - identity.yas.local.com
  gateways:
    - yas-dev-public-gateway
  http:
    - route:
        - destination:
            host: keycloak-service.keycloak.svc.cluster.local
            port:
              number: 80
