k8s/deploy/dev/istio-routing/storefront-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: storefront-public-routes
  namespace: yas-dev
spec:
  hosts:
    - storefront.yas.local.com
  gateways:
    - yas-dev-public-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: storefront-bff
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: storefront-ui
            port:
              number: 3000
